--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,7 @@ nav:
   - Contenido:
       - content/p0.md      
       - content/p1.md      
+      - content/p2.md      
       
 
   - Proyecto Integrador: 
