docs(content): add new tutorial pages for JavaScript events, storage, and API consumption
- Add p7.md with comprehensive JavaScript events tutorial
- Add p8.md covering Local Storage, Session Storage, and Cookies
- Add p9.md with API consumption activity guide and examples
- Update mkdocs.yml navigation to include new pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,10 @@ nav:
       - content/p4.md      
       - content/p5.md      
       - content/p6.md      
+      - content/p7.md      
+      - content/p8.md      
+      - content/p9.md      
+      - content/p10.md      
       
 
   - Proyecto Integrador: 
